--- a/templates/default/privoxy.conf.erb
+++ b/templates/default/privoxy.conf.erb
@@ -15,7 +15,7 @@ actionsfile user.action      # User customizations
 filterfile default.filter
 filterfile user.filter      # User customizations
 logfile logfile
-listen-address  <%= node['ipaddress'] %>:<%= node['privoxy']['port'] %>
+listen-address  <%= node['privoxy-nativex']['listen-address'] %>:<%= node['privoxy']['port'] %>
 toggle  1
 enable-remote-toggle  0
 enable-remote-http-toggle  0
